--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
     <h1>React JS Task</h1>
-    <h2>Reg. No: 21BCE10466
-        Name:  Aayush anand</h2>
+    <h2>Reg. No: 21BCE11250
+        Name:  Dhananjay Sharma</h2>
     <table  >
         <thead>
             <tr>
